--- a/HappyHealthy/Resources/layout/activity_food__type_1.axml
+++ b/HappyHealthy/Resources/layout/activity_food__type_1.axml
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ค้นหา"
-        android:textcolor="#ffffff"
+        android:textColor="#ffffff"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_alignParentRight="true"
