--- a/HappyHealthy/Resources/layout/activity_report.axml
+++ b/HappyHealthy/Resources/layout/activity_report.axml
@@ -4,58 +4,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dfe4ea">
-  <LinearLayout
-      android:id="@+id/container_toolbar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical">
-    <RadioGroup
+    <LinearLayout
+        android:id="@+id/container_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/RadioPlot"
-        android:layout_gravity="center_horizontal">
-      <RadioButton
-          android:id="@+id/report_fbs"
-          android:layout_width="wrap_content"
-          android:layout_height="35dp"
-          android:text="เบาหวาน"
-          android:textStyle="bold"
-          android:textSize="16dp"
-          android:textColor="#3a3a3a" />
-      <RadioButton
-          android:id="@+id/report_ckd"
-          android:layout_width="wrap_content"
-          android:layout_height="35dp"
-          android:text="ไต"
-          android:textStyle="bold"
-          android:textSize="16dp"
-          android:textColor="#3a3a3a"
-          android:layout_marginLeft="12.0dp" />
-      <RadioButton
-          android:id="@+id/report_bp"
-          android:layout_width="wrap_content"
-          android:layout_height="35dp"
-          android:text="ความดัน"
-          android:textStyle="bold"
-          android:textSize="16dp"
-          android:textColor="#3a3a3a"
-          android:layout_marginLeft="12.0dp" />
-    </RadioGroup>
-    <TextView
-      android:id="@+id/reportStatus"
-      android:textSize="16dp"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="null"
-      android:textColor="#000000"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="15dp"
-      android:textStyle="bold"
-    />
-    <OxyPlot.Xamarin.Android.PlotView
-        android:id="@+id/plot_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-  </LinearLayout>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:text="@string/ckd_prompt" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:prompt="@string/ckd_prompt" />
+        <TextView
+            android:id="@+id/reportStatus"
+            android:textSize="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="null"
+            android:textColor="#000000"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
+            android:textStyle="bold" />
+        <OxyPlot.Xamarin.Android.PlotView
+            android:id="@+id/plot_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </RelativeLayout>
