--- a/HappyHealthy/Resources/layout/activity_add_pill.axml
+++ b/HappyHealthy/Resources/layout/activity_add_pill.axml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#dfe4ea">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:weightSum="1"
-        android:background="#dfe4ea">
+        android:weightSum="1">
         <LinearLayout
             android:id="@+id/container_toolbar"
             android:layout_width="match_parent"
@@ -241,14 +241,6 @@
                         android:layout_marginLeft="10.0dp" />
                 </LinearLayout>
             </LinearLayout>
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="100dp"
-                android:id="@+id/imageView_button_camera"
-                android:src="@drawable/button_save_image"
-                android:layout_marginTop="10.5dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="20.0dp" />
         </LinearLayout>
         <ImageView
             android:layout_width="fill_parent"
@@ -259,13 +251,5 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="10.0dp" />
-        <ImageView
-            android:src="@drawable/pictures_ic"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_below="@+id/imageView_button_save_pill"
-            android:id="@+id/imageView_show_image"
-            android:layout_gravity="center_horizontal"
-            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </ScrollView>
